# Nov, 17 2003
- started implementation of 'PRET' command (see lftp, GridFTPD, DrFTPD)
- sfv module: diz/sfv files are processed to guess number of files to be uploaded
- definitly removed internal sfv checker, but integrated crc32 code in main lib (to be used
  by other functions)
- implemented 'XCRC' command

# Nov, 14 2003
- cookies can be used inside messages and ftp replies
- bugfix: more checks on size for messages > 1024 bytes
- function cookie_parse_buffer modified to parse buffer without sending data

# Nov, 10 2003
- sfv module: zip files are checked after upload, using the zlib for decompression
    (note: multipart zip files are not supported)

# Nov, 07 2003
- contributions from Cyprien Laplace:
- added a "site group" command to administrate groups

# Nov, 02 2003
- bugfix: segfault when adding section failed

# Oct, 27 2003
- Try to search config file in path given in ./configure
- bugfix: erasing server options after setting default values ...
- option to force shm cleanup if existing when starting
- bugfix: syslog was not used even if enabling it

#--- cvs commit TAG: rel-0-1
# Oct, 20 2003
- added periodic commit of backend
- site savecfg is now almost working
- IMPORTANT CHANGE: negation on permissions can now be written =!user
  instead of !=user
- custom messages can now be stored in files
- added optional PostgreSQL detection in configure
- cookies in vfs VIRTUAL dir: %username, %usergroup, %userhome

# Oct, 15 2003
- bugfix: waiting PASV sockets not closed when client dies
- some work on ipv6
- win32: --enable-winsock is now yes by default
- some structures are no more opaque, so we'll save the config file in a near future !
- mpatrol support to debug/find leaks/profile application
- some more facilities to debug cache/crontab/perms

# Oct, 11 2003
- bugfix: opened files/dirs not closed on sfv checker (closes: Too Many Opened Files
  after several uploads, all platforms)

# Oct, 01 2003